[GL-13300] Fix layout overflow and lesson plan height in teacher's view

--- a/src/views/teacher-class/teacher-class.scss
+++ b/src/views/teacher-class/teacher-class.scss
@@ -1,11 +1,12 @@
 @import "../../style/abstracts/variables";
-$scale-ratio: 0.68;
+$scale-ratio: 0.66;
 
 .tc {
   display: grid;
   grid-template-columns: auto 1fr;
   grid-template-rows: auto 1fr 300px;
   height: 100vh;
+  overflow: hidden;
   &__modal__notice {
 	  margin-top: 16px;
   }
@@ -16,11 +17,6 @@ $scale-ratio: 0.68;
   &__fixed-height {
     height: calc(100vh - #{$header-height});
     overflow: auto;
-  }
-  @media (max-width: $large-lap) {
-    &__fixed-height {
-      height: calc(100vh - #{$header-height * $scale-ratio});
-    }
   }
   &__sidebar {
     width: 320px;
